# aws_autoboosting_example

./: .coveragerc  .flake8  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
autoboosting/: auto_estimator.py  autotuner.py  constants.py  preprocessing.py  settings.py  train.py
docker/: Dockerfile
notebooks/: SageMaker-Enable-Model-Monitor.ipynb  SageMakerAutopilotCandidateDefinitionNotebook.ipynb  sklearn_gbm.ipynb  xgb_demo.ipynb
scripts/: build_and_push.sh
tests/: conftest.py
tests/autoboosting/: test_auto_estimator.py  test_autotuner.py  test_preprocessing.py
